--- a/Front-End/src/components/sidebar/Sidebar.css
+++ b/Front-End/src/components/sidebar/Sidebar.css
@@ -112,3 +112,24 @@
     color: #666666;
     text-align: left;
 }
+
+.extraFeatures {
+    padding: 20px;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.extraFeatures h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.extraFeatures ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+.extraFeatures ul li {
+    margin-bottom: 5px;
+}
